Issue 2540 Add county to address

--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Order/_OrderDetails.Shipping.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Order/_OrderDetails.Shipping.cshtml
@@ -105,6 +105,17 @@
                                         </td>
                                     </tr>
                                 }
+                                @if (Model.ShippingAddress.CountyEnabled)
+                                {
+                                    <tr>
+                                        <td>
+                                            @T("Admin.Orders.Address.County")
+                                        </td>
+                                        <td>
+                                            @Model.ShippingAddress.County
+                                        </td>
+                                    </tr>
+                                }
                                 @if (Model.ShippingAddress.StateProvinceEnabled)
                                 {
                                     <tr>
