--- a/src/Presentation/Nop.Web/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/Nop.Web/Views/Order/ShipmentDetails.cshtml
@@ -97,7 +97,7 @@
                                 </li>
                             }
                             <li class="city-state-zip">
-                                @Model.Order.ShippingAddress.City, @Model.Order.ShippingAddress.StateProvinceName
+                                @Model.Order.ShippingAddress.City, @Model.Order.ShippingAddress.County, @Model.Order.ShippingAddress.StateProvinceName
                                 @Model.Order.ShippingAddress.ZipPostalCode
                             </li>
                             @if (!string.IsNullOrEmpty(Model.Order.ShippingAddress.CountryName))
