--- a/src/Presentation/Nop.Web/Views/Checkout/OpcShippingAddress.cshtml
+++ b/src/Presentation/Nop.Web/Views/Checkout/OpcShippingAddress.cshtml
@@ -202,6 +202,10 @@
                                 {
                                     addressLine += ", " + address.City;
                                 }
+                                if (address.CountyEnabled && !string.IsNullOrEmpty(address.County))
+                                {
+                                    addressLine += ", " + address.County;
+                                }
                                 if (address.StateProvinceEnabled && !string.IsNullOrEmpty(address.StateProvinceName))
                                 {
                                     addressLine += ", " + address.StateProvinceName;
