--- a/src/Presentation/Nop.Web/Views/Customer/Addresses.cshtml
+++ b/src/Presentation/Nop.Web/Views/Customer/Addresses.cshtml
@@ -66,31 +66,41 @@
                                         @address.Address2
                                     </li>
                                 }
-                                @if (address.CityEnabled || address.StateProvinceEnabled || address.ZipPostalCodeEnabled)
+                                @if (address.CityEnabled && !string.IsNullOrEmpty(address.City)||
+                                    address.CountyEnabled && !string.IsNullOrEmpty(address.County) ||
+                                    address.StateProvinceEnabled && !string.IsNullOrEmpty(address.StateProvinceName) ||
+                                    address.ZipPostalCodeEnabled && !string.IsNullOrEmpty(address.ZipPostalCode))
                                 {
-                                    var cityStateZip = "";
-                                    if (address.CityEnabled)
+                                    var cityStateZip = string.Empty;
+                                    if (address.CityEnabled && !string.IsNullOrEmpty(address.City))
                                     {
-                                        cityStateZip = address.City;
-                                        if (address.StateProvinceEnabled || address.ZipPostalCodeEnabled)
+                                        cityStateZip += address.City;
+                                        if (address.CountyEnabled && !string.IsNullOrEmpty(address.County) ||
+                                            address.StateProvinceEnabled && !string.IsNullOrEmpty(address.StateProvinceName) ||
+                                            address.ZipPostalCodeEnabled && !string.IsNullOrEmpty(address.ZipPostalCode))
                                         {
-                                            cityStateZip += ",";
+                                            cityStateZip += ", ";
                                         }
                                     }
-                                    if (address.StateProvinceEnabled)
+                                    if (address.CountyEnabled && !string.IsNullOrEmpty(address.County))
                                     {
-                                        if (!string.IsNullOrEmpty(cityStateZip))
+                                        cityStateZip += address.County;
+                                        if (address.StateProvinceEnabled && !string.IsNullOrEmpty(address.StateProvinceName) ||
+                                            address.ZipPostalCodeEnabled && !string.IsNullOrEmpty(address.ZipPostalCode))
                                         {
-                                            cityStateZip += " ";
+                                            cityStateZip += ", ";
                                         }
+                                    }
+                                    if (address.StateProvinceEnabled && !string.IsNullOrEmpty(address.StateProvinceName))
+                                    {
                                         cityStateZip += address.StateProvinceName;
-                                    }
-                                    if (address.ZipPostalCodeEnabled)
-                                    {
-                                        if (!string.IsNullOrEmpty(cityStateZip))
+                                        if (address.ZipPostalCodeEnabled && !string.IsNullOrEmpty(address.ZipPostalCode))
                                         {
-                                            cityStateZip += " ";
+                                            cityStateZip += ", ";
                                         }
+                                    }
+                                    if (address.ZipPostalCodeEnabled && !string.IsNullOrEmpty(address.ZipPostalCode))
+                                    {
                                         cityStateZip += address.ZipPostalCode;
                                     }
 
