--- a/src/Presentation/Nop.Web/Views/Customer/Info.cshtml
+++ b/src/Presentation/Nop.Web/Views/Customer/Info.cshtml
@@ -187,6 +187,7 @@
                     Model.StreetAddress2Enabled ||
                     Model.ZipPostalCodeEnabled ||
                     Model.CityEnabled ||
+                    Model.CountyEnabled ||
                     Model.CountryEnabled)
             {
                 <div class="fieldset">
@@ -240,6 +241,18 @@
                                     <nop-required />
                                 }
                                 <span asp-validation-for="City"></span>
+                            </div>
+                        }
+                        @if (Model.CountyEnabled)
+                        {
+                            <div class="inputs">
+                                <label asp-for="County" asp-postfix=":"></label>
+                                <input asp-for="County" />
+                                @if (Model.CountyRequired)
+                                {
+                                    <nop-required />
+                                }
+                                <span asp-validation-for="County"></span>
                             </div>
                         }
                         @if (Model.CountryEnabled)
