Issue 417 Allow a store owner to create vendor attributes

--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Setting/Vendor.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Setting/Vendor.cshtml
@@ -182,6 +182,8 @@
                         </div>
                     </div>
                 </div>
+                @*render vendor attributes*@
+                @await Html.PartialAsync("../VendorAttribute/ListBlock.cshtml")
                 @await Component.InvokeAsync("AdminWidget", new { widgetZone = "admin_vendor_settings_bottom" })
             </div>
         </div>
