Issue 2540 Further changes to add county to address

--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Order/_OrderDetails.Shipping.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Order/_OrderDetails.Shipping.cshtml
@@ -207,6 +207,17 @@
                                         </td>
                                     </tr>
                                 }
+                                @if (!string.IsNullOrEmpty(Model.PickupAddress.County))
+                                {
+                                    <tr>
+                                        <td>
+                                            @T("Admin.Orders.Address.County")
+                                        </td>
+                                        <td>
+                                            @Model.PickupAddress.County
+                                        </td>
+                                    </tr>
+                                }
                                 @if (!string.IsNullOrEmpty(Model.PickupAddress.CountryName))
                                 {
                                     <tr>
