--- a/src/Presentation/Nop.Web/Views/Checkout/ShippingAddress.cshtml
+++ b/src/Presentation/Nop.Web/Views/Checkout/ShippingAddress.cshtml
@@ -60,7 +60,7 @@
                                 <input name="pickup-points-id" id="pickup-points-id" type="hidden" value="@($"{point.Id}___{point.ProviderSystemName}")"/>
                                 <ul>
                                     <li class="single-pickup-point name">@point.Name</li>
-                                    <li class="single-pickup-point address">@($"{point.Address} {point.City} {point.StateName} {point.CountryName}")</li>
+                                    <li class="single-pickup-point address">@($"{point.Address} {point.City} {point.County} {point.StateName} {point.CountryName}")</li>
                                     @if (!string.IsNullOrEmpty(point.PickupFee))
                                     {
                                         <li class="single-pickup-point fee">@point.PickupFee</li>
@@ -84,6 +84,10 @@
                                         if (!string.IsNullOrEmpty(point.City))
                                         {
                                             addressLine.AppendFormat(", {0}", point.City);
+                                        }
+                                        if (!string.IsNullOrEmpty(point.County))
+                                        {
+                                            addressLine.AppendFormat(", {0}", point.County);
                                         }
                                         if (!string.IsNullOrEmpty(point.StateName))
                                         {
